# portfolio

./: LICENSE  README.md
rust/litmus-zk-sp1/: Cargo.toml  README.md  TODO.txt
rust/litmus-zk-sp1/crates/lcodecs/: Cargo.toml
rust/litmus-zk-sp1/crates/lcodecs/src/binary/: constants.rs  mod.rs  (+1 more)
rust/litmus-zk-sp1/crates/lcrypto/: Cargo.toml
rust/litmus-zk-sp1/crates/lcrypto/src/: lib.rs
rust/litmus-zk-sp1/crates/lkernel/: Cargo.toml
rust/litmus-zk-sp1/crates/lkernel/fixtures/: config.toml
rust/litmus-zk-sp1/crates/lkernel/src/: lib.rs
rust/litmus-zk-sp1/crates/ltypeset/: Cargo.toml
rust/litmus-zk-sp1/crates/ltypeset-utils/: Cargo.toml
rust/litmus-zk-sp1/crates/ltypeset-utils/src/: crypto.rs
rust/litmus-zk-sp1/crates/ltypeset/src/: lib.rs  utils.rs
rust/litmus-zk-sp1/crates/lverifiers/: Cargo.toml
rust/litmus-zk-sp1/crates/lverifiers/src/: lib.rs
rust/litmus-zk-sp1/elf/: riscv32im-succinct-zkvm-elf
rust/litmus-zk-sp1/hack/: Cargo.toml
rust/litmus-zk-sp1/hack/assets/: block-469.json  block-471.json  block-472.json  block-474.json  block_hash_trusted.txt  crypto.json
rust/litmus-zk-sp1/hack/src/: main.rs
rust/litmus-zk-sp1/program/: Cargo.toml
rust/litmus-zk-sp1/program/src/: chain.rs  crypto.rs  main.rs
rust/litmus-zk-sp1/resources/chain/: block-470.json  block-473.json  network_name.txt  trusted_hash.txt
rust/litmus-zk-sp1/resources/chain/blocks/: block-00-b3f473058b6065c1d08a400dbc76054e491513a8b102c1709561730294c5a88e.json  block-01-4b292bedb5ec07c86e730c6117d6ae3560cc24cce093db6801628a39f477d1d2.json  block-02-173ce2daa6b68c4a415bae6d74443b5d92f3ea19b03c06f6ee01c917fee7ef5f.json  block-03-ace54c4d1094bc6b31f1f375e30005aadc4e0a63c61208c5565c4f2c1ef931ed.json  block-04-a1a3963eca7a40a47afac0dafb227bb128b165fe2b34b225e0b507ac2ae02fa8.json  block-05-75942d19fa5042c56b7d9ead9f5c6847a20880da22c2aa4205c44f089c2cd993.json  block-06-2bf76b586eac2120dc1566044645494df6bf9bbfdda9a7fef2b42b36740ef169.json  block-07-8b9eff195a7b9ccb1095cfaf4cc4cbb02fd774a4f57648d2ba9b8ea3cb5ea8c3.json  block-08-3203a455125f2ea1a1e78c5348151d7bbed4cc684f7430e8630a7c3280577318.json  block-09-bd86bbef8a335d48f705dc4aa8213226a6d45de764323e016c2ac5d6ea0232b3.json  block-10-7fb6209f57fe661fb431d0d35143fb1a1b623333d4b6e7a859fa6e30b1a6cdc8.json  block-11-f039fcd8808053aef19ba7082d873a2fc3bbbffb42c8a5478858dc4922da07e1.json  block-12-70da369b0f0e30bdfda6b71c54ac4a7187094cf705953a9bdfd460cb3617fdbf.json  block-13-03fa9da3ae9a436a3b4019017d1a5a205020a0dbfd2b9e285ae8fc56056e5115.json  (+37 more)
rust/litmus-zk-sp1/resources/crypto/: digests.json  sigs.json
rust/litmus-zk-sp1/resources/env/: template.toml
rust/litmus-zk-sp1/script/: Cargo.toml  env.toml
(+1057 files in other folders)
