[workspace]
resolver = "2"
members = [
    "crates/lcodecs",
    "crates/lcrypto",
    "crates/lkernel",
    "crates/ltypeset",
    "crates/ltypeset-utils",
    "crates/lverifiers",
    "hack",
    "program",
    "script",
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
hex = { version = "0.4.3", features = ["serde"] }
rand = "0.9.1"
proptest = { version = "1.6.0", features = ["attr-macro"] }
proptest-derive = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_cbor = "0.11.2"

[patch.crates-io]
ed25519-consensus = { git = "https://github.com/sp1-patches/ed25519-consensus", branch = "patch-v2.1.0" }
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", branch = "patch-secp256k1-v0.29.0" }
blake2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "blake2" }
