[package]
name = "hack"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
lcrypto = { path = "../crates/lcrypto" }
rand.workspace = true
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
lkernel = { path = "../crates/lkernel" }
ltypeset = { path = "../crates/ltypeset" }
toml = "0.8.19"
