[package]
name = "lkernel"
edition = "2021"
version.workspace = true

[dependencies]
camino = "1.1.9"
ltypeset = { path = "../ltypeset" }
serde.workspace = true
serde_json = "1.0.132"
toml = "0.8.19"

[dev-dependencies]
hex.workspace = true
proptest.workspace = true
proptest-derive.workspace = true
rand.workspace = true
