[package]
name = "ltypeset"
version = "0.1.0"
edition = "2021"

[dependencies]
hex.workspace = true
humantime = "2.1.0"
lcrypto = { path = "../lcrypto" }
serde.workspace = true
serde_bytes = "0.11.15"

[dev-dependencies]
proptest.workspace = true
proptest-derive.workspace = true
rand.workspace = true
